--- a/theme.toml
+++ b/theme.toml
@@ -1,21 +1,17 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Hero"
+name = "hero"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = ""
-homepage = "https://bigyue.gitee.io"
-tags = ['simple', 'explorer', 'search']
-features = ['explorer', 'search']
-min_version = "0.88.0"
+licenselink = "https://github.com/yue1124/hero/blob/main/LICENSE"
+description = "A hugo theme with File Manager Style. (Hugo Explorer ReadOnly)"
+
+homepage = "https://github.com/yue1124/hero"
+demosite = ""
+
+tags = ['simple', 'font awesome', 'katex', 'explorer', 'search']
+features = ['explorer', 'search', 'katex', 'toc']
 
 [author]
   name = "bigyue"
   homepage = "https://bigyue.gitee.io"
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
